src/test/deca/codegen/valid/arithmetique/depasse-mult.deca
// Description:
//    Dépassement dû à une multiplication
//
// Résultats:
//    Erreur d'exécution: dépassement d'entier

{
   int a, b, c;
   a = 100000;
   b = 100000;
   c = a * b; 
   println(c);
}
